# ipb_car_launch

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
config/: ipb_car.rviz  topics_to_record.yaml
config/camera/: cam_front.yaml  cam_left.yaml  cam_rear.yaml  cam_right.yaml
config/gps/: sbg_config.yaml  sbg_config_table.yaml
config/lidar/: README.md  lidar_hor.yaml  lidar_hor_params.yaml  lidar_ver_params.yaml  lidar_vert.yaml
launch/: cameras.launch  cameras.launch.py  launcher.launch  launcher.launch.py  lidars.launch  lidars.launch.py  monitor.launch  record.launch  rpi_time.launch  visualizer.launch
launch/old/: gps_sbg_launch.xml  urdf_launch.xml
