<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ipb_car_launch</name>
  <version>0.0.1</version>
  <description>Launch all the necessary nodes when recording data
  using the car mount. Additoially it also provides a set of
  watchdog tools that will help you monitor the recording
  process.</description>
  <maintainer email="ivizzo@uni-bonn.de">Ignacio Vizzo</maintainer>
  <license>MIT</license>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>pylon_ros2_camera_component</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sbg_driver</exec_depend>
  <exec_depend>tf</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
